include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_BINARY_DIR}/include)

#add_executable(celduin_info celduin_info.cpp)
#target_link_libraries(celduin_info celduin ${Boost_LIBRARIES})
#install(TARGETS celduin_info
#    DESTINATION ${BIN_INSTALL_DIR}
#    COMPONENT tools)

